apps/saleor/base/service-dashboard.yaml
# Saleor Base: Dashboard Service

apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: kyeol
  labels:
    app: dashboard
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: dashboard
  type: ClusterIP
